--- a/codes/options/dped/ct_test_sp32v50m50_5K_yic_210520.yml
+++ b/codes/options/dped/ct_test_sp32v50m50_5K_yic_210520.yml
@@ -1,5 +1,5 @@
 name: ct_test_sp32v50m50_5K_yic_210520
-suffix: ~  # add suffix to saved images
+suffix: _sp32v50m50_5K  # add suffix to saved images
 model: srgan
 distortion: sr
 scale: 4
@@ -10,7 +10,7 @@ datasets:
   test_1:  # the 1st test dataset
     name: ct_test_sp32v50m50_5K_yic_210520
     mode: LR
-    dataroot_LR: /home/yicrane/dataset/DATA_CT/CT_256_PNG_TE
+    dataroot_LR: /home/yic/dataset/DATA_CT/CT_256_PNG_TE
 
 #### network structures
 network_G:
@@ -23,7 +23,7 @@ network_G:
 
 #### path
 path:
-  pretrain_model_G: /home/yicrane/PycharmProjects/Real-SR/experiments/ct_train_kernel_noise_sp32v50m50_yic_210520/models/5000_G.pth
+  pretrain_model_G: /home/yic/PycharmProjects/Real-SR/experiments/ct_train_kernel_noise_sp32v50m50_yic_210520/models/5000_G.pth
   results_root: ./results/
 
 back_projection: False
